FIXED layout bug with horizontal scrolling for Desktop & Mobiles. Refactor Contact component / Update layout and styling for improved user experience, add ContactForm component for better feedback collection, and enhance responsiveness across various devices.

--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -7,5 +7,63 @@
   align-items: center;
   box-sizing: border-box;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    height: 70%;
+    width: 80%;
+    max-width: 1440px;
+    background-color: abs.$grey;
+    padding: 0.25rem;
+
+    &__content {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      padding: 2rem 2rem;
+      background-color: abs.$darker-grey;
+
+      &__LBlock {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        width: 50%;
+        height: 100%;
+        h3 {
+          transform-origin: left;
+          font-weight: 900;
+          font-size: 3rem;
+          letter-spacing: 2px;
+          /* font-size: 1rem; */
+          line-height: 1.5;
+          /*       line-height: 3; */
+          /*     transform: scale(1, 1.25);
+          white-space: nowrap; */
+          text-transform: uppercase;
+        }
+      }
+
+      &__RBlock {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        width: 50%;
+        height: 100%;
+        /*   padding: 0 2rem; */
+      }
+    }
+  }
 }
